Corrected align-items in lists div

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ html {
     justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .list {
@@ -44,7 +45,7 @@ html {
     padding: 0.5vh 0.5vw 0.5vh 0.5vw; 
     border-radius: 10px;
     font-family: 'Roboto', sans-serif;
-}
+    }
 
 .listHeader {
     display: flex;
@@ -58,7 +59,7 @@ html {
 }
 
 .task {
-    display: flex;;
+    display: flex;
     justify-content: left;
     padding: 0.5vh 0.5vw 0.5vh 0.5vw;
 }
